--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - main
       - "feature/*"
+env:
 
 jobs:
   unit-testing:
@@ -26,8 +27,8 @@ jobs:
       - name: Unit Testing
         run: npm test
 
-    #   - name: Archive Test Result
-    #     uses: actions/upload-artifact@v3
-    #     with:
-    #       name: Mocha-Test-Result
-    #       path: test-results.xml
+      - name: Archive Test Result
+        uses: actions/upload-artifact@v3
+        with:
+          name: Mocha-Test-Result
+          path: test-results.xml
